Fix contrast in Classic Blue for the --sidebar-heading-color variable.

--- a/assets/stylesheets/shared/_color-schemes.scss
+++ b/assets/stylesheets/shared/_color-schemes.scss
@@ -321,7 +321,8 @@
 		--color-button-primary-background-hover: #{$muriel-orange-400};		
 
 		--sidebar-background: #{$muriel-gray-50};
-		--sidebar-background-gradient: #{hex-to-rgb( $muriel-gray-50 )};		
+		--sidebar-background-gradient: #{hex-to-rgb( $muriel-gray-50 )};
+		--sidebar-heading-color: #{$muriel-gray-600};
 		--sidebar-menu-a-first-child-after-background: #{hex-to-rgb( $muriel-gray-50 )};
 		--sidebar-menu-selected-background-color: #{$muriel-gray-500};
 		--sidebar-menu-selected-a-color: #{$muriel-white};
